----------------------------

- Added support for nautical miles unit (#3173)

- Fixed encoding metadata ignored by a few wcs/wfs 1.1 and sos requests (#3182)

- PHP/Mapscript: added "autofollow" and "repeatdistance" in labelObj (#3175)

- Added charset in content-type http header for wms/wfs/sos/wcs requests (#2583)

- Python/MapScript: improve compatability for different swig versions (#3180)

Version 5.6.0-beta4 (2009-10-18):
---------------------------------

- Allow processing of single shapefiles with no items (e.g. an empty dbf file) (#3147)

- Added resolution scaling for swf, svg, pdf and imagemap drivers (#3157)

- Correct cases where a valid WFS Layer might return errors if
  map extent does not overlap the layer extent (#3139)

- fix problem with 0-length line patterns in AGG

- Fixed problem of text/html WMS GetFeatureInfo which was returning HTML 
  image map output instead of the expected text/html template output.
  This was done by changing the imagemap outputformat to use the 
  "text/html; driver=imagemap" mime type (#3024)

- more resolution fixes for resolution scaling (symbolscale case) (#3157)

- Make sure layer extents are saved when a mapfile is written (#2969)

- Fixed CurvePolygons from oracle not drawn (#2772)

- Fixed raster queries (broken by RFC 52 changes) (#3166)

- Fixed coordinate projection problem in some cases with WMS GetFeatureInfo
  output in GML2 format (#2989)

- Added resolution scaling of some properties for GD driver (#3157)

- Modified GD functions API to be consistent with all others drivers (#3157)

- OGC Filter: strip all namespaces (not only ogc, gml) (#1350)

- Use decimal values for size and width in SVG output format (#2835)

- Correct invalid test when loading movies in an swf ouput (#2524)

- Return WMS GetCapabilities v1.3.0 by default as required by spec (#3169)

- Fixed mapObj.zoomScale() and mapobj.zoomRectangle() scaling problem in
  Mapscript (#3131)

- Few more fixes for high res output (#3157)
