@@ -24,6 +24,9 @@ Current Version (SVN trunk):
 
 - Python/MapScript: improve compatability for different swig versions (#3180)
 
+- maprasterquery.c: a few fixes since beta4 (#3181, #3168).
+
+
 Version 5.6.0-beta4 (2009-10-18):
 ---------------------------------
 
